tests/NormalTests/paczka1/small_fuzzy/98349751.err
Error in line 5: A694 S820 98,3
Error in line 7: A694 A923 15,9
Error in line 9: kb4 S820 80,9
